# PE-MAS

./: .env.example  .gitignore  Makefile  README.md  requirements.txt  server.py
app/: __init__.py  main.py  studio.py
app/api/: deps.py
app/schemas/: agents.py  common.py  plecs.py  requirements.py  topologies.py
core/: __init__.py  runtime.py
core/agents/: __init__.py  base.py  registry.py
core/data_adapters/: __init__.py  base.py  datasheet.py  digikey.py  literature.py  nexar_octopart.py
core/domain/: __init__.py  calculations.py  constraints.py  readiness.py  units.py
core/flyback_mas/: __init__.py  formula_guardrails.py  graph.py  knowledge_guardrails.py  lifelong_memory.py  planning.py  skills_manager.py  state.py
core/knowledge/: component_kb.py  provenance.py  rag_service.py  topology_kb.py
core/llm/: __init__.py  llm.py
core/mas/: __init__.py  artifacts.py  events.py  orchestrator.py  state.py  trace.py  workflow.py
core/plecs/: __init__.py  client.py  models.py  registry.py
core/requirements_agent/: __init__.py  adapters.py  agent.py  db_models.py  plecs_registry.py  schemas.py  topology_service.py
core/simulation/: __init__.py
core/studio_contract/: __init__.py  gate_service.py
core/utils/: __init__.py  chrome_mcp_client.py  component_rag_bridge.py  digikey_local_db.py  persistent_mcp.py  web_search.py
data/plecs/: model_registry.json
data/topologies/: topologies.json
frontend/: index.html
plecs-mcp/: plecs_mcp_server.py  pyproject.toml  server.json
plecs-mcp/src/plecs_mcp/: cli.py  config.py  rpc.py  server.py  tools.py
(+85 files in other folders)
