[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plecs-mcp"
version = "0.1.0"
description = "Generic MCP server for PLECS XML-RPC with high-freedom tool surface"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "PE-MAS Contributors" }
]
dependencies = [
  "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/plecs-mcp"
Repository = "https://github.com/your-org/plecs-mcp"

[project.scripts]
plecs-mcp-server = "plecs_mcp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
